--- a/css/main.css
+++ b/css/main.css
@@ -36,10 +36,10 @@ a:focus, a:hover {
     display: table-cell;
     font-size: 1.15rem;
     font-weight: bold;
-    height: 120px;
+    height: 140px;
     text-align: center;
     vertical-align: middle;
-    width: 120px;
+    width: 140px;
 }
 
 .navbar .nav-link:focus, .navbar .nav-link:hover {
@@ -53,7 +53,7 @@ a:focus, a:hover {
 .jumbotron {
     background: #1badea url("../img/theme/backgrounds/jumbotron-background.png") no-repeat top center;
     color: #fff;
-    margin-bottom: 4rem;
+    margin-bottom: 0;
 }
 
 .jumbotron-heading {
@@ -75,6 +75,15 @@ a:focus, a:hover {
     border: 4px solid #fff;
 }
 
+.jumbotron-extra {
+    background-image: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.75)), url("../img/theme/backgrounds/white_carbon.png");
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-bottom: 4rem;
+    padding: 1.5rem 0;
+    text-align: center;
+}
+
 
 
 .btn-primary {
@@ -82,6 +91,11 @@ a:focus, a:hover {
     border: 2px solid #fff;
     font-size: 1.4rem;
     padding: 0.25rem 1rem;
+}
+
+.btn-primary:hover {
+    background: #494a4e;
+    border-color: #fff;
 }
 
 
@@ -114,6 +128,10 @@ a:focus, a:hover {
 }
 
 
+
+.section-screenshot {
+    margin-bottom: 4rem;
+}
 
 .stripe {
     padding: 3rem 0;
@@ -169,7 +187,24 @@ a:focus, a:hover {
     margin-bottom: 2rem;
 }
 
+.nav-link.social {
+    border-radius: 50%;
+    padding: 8px;
+}
+
+.social-twitter {
+    background: #55ACEE;
+}
+
+.social-github {
+    background: #181717;
+}
+
+.social-pocket {
+    background: #EF3F56;
+}
+
 .social-icon {
-    height: 32px;
-    width: 32px;
+    height: 24px;
+    width: 24px;
 }
