Create App Page layout, better organize content in includes, add content

--- a/_includes/secondarymenus/colorveil.html
+++ b/_includes/secondarymenus/colorveil.html
@@ -1,8 +1,10 @@
 <!-- Site Section Menu -->
-        <nav class="nav nav-inline site-section-menu">
+    <div class="container stripe-secondary-menu">
+        <nav class="nav nav-inline secondary-menu">
             <a class="nav-link {% if page.active == 'overview' %}active{% endif %}" href="/colorveil/windows/">Overview</a>
-            <a class="nav-link" href="/colorveil/windows/help/">Help</a>
+            <a class="nav-link {% if page.active == 'help' %}active{% endif %}" href="/colorveil/windows/help/">Help</a>
             <a class="nav-link {% if page.active == 'reviews' %}active{% endif %}" href="/colorveil/reviews/">Reviews</a>
             <a class="nav-link {% if page.active == 'history' %}active{% endif %}" href="/colorveil/windows/history/">History</a>
-            <a class="nav-link" href="/colorveil/windows/download/">Download</a>
+            <a class="nav-link {% if page.active == 'download' %}active{% endif %}" href="/colorveil/windows/download/">Download</a>
         </nav>
+    </div>
