--- a/_includes/stripes/logos/colorveil.html
+++ b/_includes/stripes/logos/colorveil.html
@@ -1,5 +1,5 @@
 <!-- ColorVeil Featured Logos -->
-        <div class="stripe stripe-featured-logos">
+        <div class="container stripe stripe-featured-logos">
             <a href="http://www.pcadvisor.co.uk/download/system-desktop-tools/colorveil-200101-3330561/" target="_blank">
                 <img class="featured-logo" width="200" src="/img/third/reviews/p/pcadvisor/pcadvisor-white-transparent.png" alt="PC Advisor" />
             </a>
