--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
+    
+    <!-- Site Header -->
     <header>
         <nav class="navbar">
             <div class="container">
