--- a/css/main.css
+++ b/css/main.css
@@ -199,14 +199,22 @@ a:focus, a:hover {
 }
 
 /*
- * Quote stripe.
+ * Bottom stripe.
  */
 
-.stripe-quote {
+.stripe-bottom {
     background: #f5f5f5;
     color: rgba(0, 0, 0, 0.5);
+    padding: 3rem;
     text-align: center;
 }
+
+.stripe-bottom > :last-child {
+    margin-bottom: 0;
+}
+
+
+
 
 .blockquote {
     border-left: none;
@@ -285,7 +293,6 @@ a:focus, a:hover {
  .square-heading {
      background: #1badea;
      border-left: 2px solid #fff;
-     box-sizing: content-box;
      color: #fff;
      font-size: 1rem;
      font-weight: bold;
@@ -294,6 +301,12 @@ a:focus, a:hover {
      margin: 0 0 3rem 0;
      text-align: center;
      width: 140px;
+ }
+
+ .page-heading {
+     font-size: 1.5rem;
+     font-weight: bold;
+     margin-bottom: 2rem;
  }
 
  .item-heading {
@@ -308,6 +321,7 @@ a:focus, a:hover {
  }
 
 
+
 /*
  * Link styles.
  */
@@ -315,4 +329,21 @@ a:focus, a:hover {
 .heading-link:focus, .heading-link:hover {
     color: #000;
     text-decoration: none;
+}
+
+
+.help-section {
+    margin-bottom: 3rem;
+}
+
+.help-heading {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 3rem;
+}
+
+.help-section-heading {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
 }
