Improved layout structure and ColorVeil pages

--- a/_includes/templates/review.html
+++ b/_includes/templates/review.html
@@ -1,4 +1,4 @@
-<blockquote class="blockquote">
+<blockquote class="blockquote content-item">
     <h3 class="quote-heading">
         {% if review.link %}<a class="heading-link" href="{{ review.link }}" target="_blank">{% endif %}
             {{ review.by }}
