--- a/_includes/templates/testimonial.html
+++ b/_includes/templates/testimonial.html
@@ -1,4 +1,4 @@
-<blockquote class="blockquote hcontent">
+<blockquote class="blockquote content-item">
     <h3 class="quote-heading">
         {% if testimonial.link %}<a class="heading-link" href="{{ testimonial.link }}" target="_blank">{% endif %}
             {{ testimonial.by }}
