Add the rest of CinemaDrape pages, and the main Reviews page * add CinemaDrape logos * add CinemaDrape reviews and testimonials

--- a/_includes/stripes/logos/colorveil.html
+++ b/_includes/stripes/logos/colorveil.html
@@ -1,15 +1,16 @@
     <!-- ColorVeil Featured Logos -->
     <div class="container featured-logos stripe stripe-featured-logos">
+        <h2 class="featured-heading">As featured in</h2>
         <a href="http://www.pcadvisor.co.uk/download/system-desktop-tools/colorveil-200101-3330561/" target="_blank">
-            <img class="featured-logo" width="200" src="/img/third/reviews/p/pcadvisor/pcadvisor-white-transparent.png" alt="PC Advisor" />
+            <img class="featured-logo" height="30" src="/img/third/reviews/p/pcadvisor/pcadvisor-white-transparent.png" alt="PC Advisor" />
         </a>
         <a href="http://www.digi24.ro/Stiri/Digi24/Sci-tech/Tehnologie/Aplicatie+pentru+dislexici" target="_blank">
-            <img class="featured-logo" width="75" src="/img/third/reviews/d/digi24/digi24-white-transparent.png" alt="Digi24" />
+            <img class="featured-logo" height="50" src="/img/third/reviews/d/digi24/digi24-white.png" alt="Digi24" />
         </a>
         <a href="http://www.computerworlduk.com/download/system-desktop-tools/colorveil-200101-3330561/" target="_blank">
-            <img class="featured-logo" width="200" src="/img/third/reviews/c/computerworld/computerworld-white-transparent.png" alt="Computerworld" />
+            <img class="featured-logo" height="40" src="/img/third/reviews/c/computerworld/computerworld-white-transparent.png" alt="Computerworld" />
         </a>
         <a href="http://www.rockybytes.com/colorveil" target="_blank">
-            <img class="featured-logo" width="250" src="/img/third/reviews/r/rockybytes/rockybytes-white-transparent.png" alt="Rocky Bytes" />
+            <img class="featured-logo" height="40" src="/img/third/reviews/r/rockybytes/rockybytes-white-transparent.png" alt="Rocky Bytes" />
         </a>
     </div>
