--- a/_includes/jumbotrons/cinemadrape.html
+++ b/_includes/jumbotrons/cinemadrape.html
@@ -2,7 +2,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/cinemadrape/cinemadrape-jumbotron-shot.jpg" alt="CinemaDrape Screenshot" />
-            <h1 class="jumbotron-heading"><strong class="appname">CinemaDrape.</strong>  Focus on your task by blanking or dimming other screen areas.</h1>
+            <h1 class="jumbotron-heading"><strong class="appname">CinemaDrape.</strong>  Minimize distractions and focus on your task by blacking out other screen areas.</h1>
             <p class="jumbotron-quote"><q>CinemaDrape provides a more flexible way to focus solely on your areas of interest.</q> (BetaNews)</p>
             <a class="btn btn-primary" href="/cinemadrape/windows/download/" role="button">Free Download for Windows</a>
         </div>
