Add the rest of Colortypist pages * add some Colortypist reviews

--- a/_includes/jumbotrons/colortypist.html
+++ b/_includes/jumbotrons/colortypist.html
@@ -3,7 +3,7 @@
     <div class="container">
         <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/colortypist/colortypist-jumbotron-shot.png" alt="Colortypist Screenshot" />
         <h1 class="jumbotron-heading"><strong class="appname">Colortypist.</strong>  Type in a color name or code, and see it fill your screen in real-time, while you type.</h1>
-        <p class="jumbotron-quote"><q>If you do any work with colors or HTML, Colortypist is a phenomenal download to have.</q> (CNET)</p>
+        <p class="jumbotron-quote"><q>A handy free color picker and viewer with plenty of useful features.</q> (PC &amp; Tech Authority)</p>
         <a class="btn btn-primary" href="/colortypist/windows/download/" role="button">Free Download for Windows</a>
     </div>
 </div>
