Add InjuredPixels for Android pages * Start fixing names of include files

--- a/_includes/jumbotrons/injuredpixels-windows.html
+++ b/_includes/jumbotrons/injuredpixels-windows.html
@@ -4,6 +4,7 @@
         <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/injuredpixels/windows/injuredpixels-jumbotron-shot.png" alt="InjuredPixels Screenshot" />
         <h1 class="jumbotron-heading"><strong class="appname">InjuredPixels.</strong>  Check your PC, laptop or tablet screen for dead pixels, scratches or defects.</h1>
         <p class="jumbotron-quote"><q>InjuredPixels is just about as simple a program as you'll see.</q> (BetaNews)</p>
-        <a class="btn btn-primary" href="/injuredpixels/windows/download/" role="button">Free Download for Windows</a>
+        <p><a class="btn btn-primary" href="/injuredpixels/windows/download/" role="button">Get it Free for Windows</a></p>
+        <p>Also available for <a class="link" href="/injuredpixels/android/">Android</a></p>
     </div>
 </div>
