--- a/_includes/secondarymenus/cinemadrape-windows.html
+++ b/_includes/secondarymenus/cinemadrape-windows.html
@@ -3,7 +3,7 @@
         <nav class="nav nav-inline secondary-menu">
             <a class="nav-link{% if page.active == 'overview' %} active{% endif %}" href="/cinemadrape/windows/">Overview</a>
             <a class="nav-link{% if page.active == 'help' %} active{% endif %}" href="/cinemadrape/windows/help/">Help</a>
-            <a class="nav-link{% if page.active == 'reviews' %} active{% endif %}" href="/cinemadrape/reviews/">Reviews</a>
+            <a class="nav-link{% if page.active == 'reviews' %} active{% endif %}" href="/cinemadrape/windows/reviews/">Reviews</a>
             <a class="nav-link{% if page.active == 'history' %} active{% endif %}" href="/cinemadrape/windows/history/">History</a>
             <a class="nav-link{% if page.active == 'download' %} active{% endif %}" href="/cinemadrape/windows/download/">Download</a>
         </nav>
