--- a/_layouts/simple-page.html
+++ b/_layouts/simple-page.html
@@ -2,7 +2,7 @@
 
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <h1 class="jumbotron-heading"><strong class="appname">{{page.title}}</strong></h1>
+        <h1 class="jumbotron-heading"><strong class="appname">{{page.heading}}</strong></h1>
     </div>
 </div>
 
