Start adding SEO titles and metas to pages * add app home pages redirects

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -5,14 +5,14 @@
 
             <!-- App Links -->
             <nav class="nav nav-inline">
-                <a class="nav-link" href="/cinemadrape/">CinemaDrape</a>
-                <a class="nav-link" href="/colorveil/">ColorVeil</a>
-                <a class="nav-link" href="/injuredpixels/">InjuredPixels</a>
-                <a class="nav-link" href="/pixelhealer/">PixelHealer</a>
-                <a class="nav-link" href="/colortypist/">Colortypist</a>
-                <a class="nav-link" href="/whatsmyco/">WhatsMyCo</a>
-                <a class="nav-link" href="/thumbico/">Thumbico</a>
-                <a class="nav-link" href="/htmtied/">HTMtied</a>
+                <a class="nav-link" href="/cinemadrape/windows/">CinemaDrape</a>
+                <a class="nav-link" href="/colorveil/windows/">ColorVeil</a>
+                <a class="nav-link" href="/injuredpixels/windows/">InjuredPixels</a>
+                <a class="nav-link" href="/pixelhealer/windows/">PixelHealer</a>
+                <a class="nav-link" href="/colortypist/windows/">Colortypist</a>
+                <a class="nav-link" href="/whatsmyco/web/">WhatsMyCo</a>
+                <a class="nav-link" href="/thumbico/windows/">Thumbico</a>
+                <a class="nav-link" href="/htmtied/windows/">HTMtied</a>
             </nav>
 
             <!-- Main Links -->
