--- a/css/main.css
+++ b/css/main.css
@@ -1,417 +1,7 @@
-body {
-    color: #373737;
-    font-family: 'Monda', "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-/*
-@media (min-width: 992px) {
-    body {
-        background: url("../img/theme/backgrounds/body-texture.png") repeat #F5F5F5;
-    }
-}
-*/
-
-a {
-    color: #1badea;
-}
-
-a:focus, a:hover {
-    color: #1badea;
-    text-decoration: underline;
-}
-
-
-.navbar {
-    background: #fff;
-    border-bottom: 2px solid #fff;
-    padding: 0;
-}
-
-.navbar-brand {
-    padding: 0;
-}
-
-.header-logo {
-    max-height: 140px;
-}
-
-.navbar .nav {
-    float: right;
-}
-
-.navbar .nav-link {
-    color: #000;
-    display: table-cell;
-    font-size: 1.15rem;
-    font-weight: bold;
-    height: 140px;
-    text-align: center;
-    vertical-align: middle;
-    width: 140px;
-}
-
-.navbar .nav-link:focus, .navbar .nav-link:hover {
-    background: #1badea;
-    color: #fff;
-}
-
-
-
-
-.jumbotron {
-    background: #1badea url("../img/theme/backgrounds/jumbotron-background.png") no-repeat top center;
-    color: #fff;
-    margin-bottom: 0;
-}
-
-.jumbotron a.link {
-    color: #fff;
-    border-bottom: 1px dotted #fff;
-}
-
-.jumbotron a.link:focus, .jumbotron a.link:hover {
-    border-bottom: 1px solid #fff;
-    text-decoration: none;
-}
-
-.jumbotron-heading {
-    font-size: 1.75rem;
-    margin-bottom: 1rem;
-}
-
-.jumbotron-quote {
-    margin-bottom: 2rem;
-}
-
-.appname {
-    font-family: 'Dosis', sans-serif;
-    font-size: 4.5rem;
-    font-weight: 200;
-}
-
-.jumbotron-shot {
-    border: 4px solid #fff;
-    margin-left: 1rem;
-}
-
-.jumbotron-extra {
-    background: #f5f5f5;
-    font-size: 1.25rem;
-    font-weight: bold;
-    margin-bottom: 3rem;
-    padding: 1.5rem 0;
-    text-align: center;
-}
-
-/*
-.main-content {
-    background: #fff;
-    padding-bottom: 1rem;
-    padding-top: 4rem;
-}
-*/
-
-.site-main {
-    padding-top: 4rem;
-}
-
-
-
-.btn-primary {
-    background: linear-gradient(to top, #757676 0%,#222222 0%,#4c4c4c 69%,#757676 98%) #494a4e;
-    border: 2px solid #fff;
-    font-size: 1.4rem;
-    padding: 0.25rem 1rem;
-}
-
-.btn-primary:focus, .btn-primary:hover {
-    background: #494a4e;
-    border-color: #fff;
-}
-
-
-
-/*
- * Secondary menu.
- */
-
-
-.stripe-secondary-menu {
-    background: #1badea;
-    border-top: 2px solid #fff;
-}
-
-.secondary-menu {
-    display: table;
-    table-layout: fixed;
-    width: 100%;
-}
-
-.secondary-menu .nav-link {
-    background: #1badea;
-    border-left: 2px solid #fff;
-    color: #fff;
-    display: table-cell;
-    font-size: 1.1rem;
-    padding: 1rem 0;
-    text-align: center;
-}
-
-.secondary-menu .nav-link:first-child {
-    border-left: none;
-}
-
-.secondary-menu .nav-link:hover {
-    background: #34b6ec;
-}
-
-.secondary-menu .nav-link.active {
-    background: #fff;
-    color: #1badea;
-    font-weight: bold;
-}
-
-
-
-
-
-.section-heading {
-    font-weight: bold;
-    margin-bottom: 3rem;
-    text-align: center;
-}
-
-
-.page-heading {
-    margin-bottom: 2rem;
-}
-
-
-
-
-
-
-.section-screenshot {
-    margin-bottom: 4rem;
-}
-
-.stripe {
-    padding: 3rem 0;
-}
-
-/*
- * Featured logos.
- */
-
-/*
-.featured-logos {
-    display: table-cell;
-    vertical-align: middle;
-}
-*/
-
-.featured-logos a:focus, .featured-logos a:hover {
-    text-decoration: none;
-}
-
-.featured-logo {
-    margin: 0 2rem;
-}
-
-.featured-stripe {
-    background: #1badea;
-    padding: 3rem 0 2rem 0;
-    text-align: center;
-}
-
-/*
- * Bottom stripe.
- */
-
-.stripe-bottom {
-    background: #f5f5f5;
-    color: rgba(0, 0, 0, 0.5);
-    padding: 3rem;
-    text-align: center;
-}
-
-.stripe-bottom > :last-child {
-    margin-bottom: 0;
-}
-
-
-
-
-.blockquote {
-    border-left: none;
-    font-size: 1rem;
-    padding: 0;
-}
-
-.stripe-quote .blockquote {
-    padding: 0 4rem;
-}
-
-
-
-.more {
-    margin-bottom: 0;
-    text-align: center;
-}
-
-
-/*****************************
- Site footer
-*****************************/
-
-.site-footer {
-    background: #f0f0f0;
-    padding: 3rem 0;
-    text-align: center;
-}
-
-.site-footer .nav {
-    margin-bottom: 1rem;
-}
-
-.site-footer .nav-link {
-    color: #373737;
-}
-
-.copyright {
-    color: #555;
-    margin-bottom: 2rem;
-}
-
-.nav-link.social {
-    border-radius: 50%;
-    padding: 8px;
-}
-
-.social-twitter {
-    background: #55ACEE;
-}
-
-.social-github {
-    background: #181717;
-}
-
-.social-pocket {
-    background: #EF3F56;
-}
-
-.social-icon {
-    height: 24px;
-    width: 24px;
-}
-
-
-.list-group {
-    margin-bottom: 1rem;
-}
-
-.list-group-item {
-    border: none;
-    border-top: 1px solid #eee;
-}
-
-.list-group-item:first-child, .list-group-item:last-child {
-    border-radius: 0;
-}
-
-
-/*
- * Heading styles.
- */
-
- .square-heading {
-     background: #1badea;
-     border-left: 2px solid #fff;
-     color: #fff;
-     font-size: 1rem;
-     font-weight: bold;
-     height: 140px;
-     line-height: 140px;
-     margin: 0 0 3rem 0;
-     text-align: center;
-     width: 140px;
- }
-
- .page-heading {
-     font-size: 1.5rem;
-     font-weight: bold;
-     margin-bottom: 2rem;
- }
-
- .item-heading {
-     font-size: 1.25rem;
-     margin-bottom: 1rem;
- }
-
- .quote-heading {
-     font-size: 1.25rem;
-     font-weight: bold;
-     margin-bottom: 1rem;
- }
-
- .featured-heading {
-     color: #fff;
-     font-size: 1.25rem;
-     font-weight: bold;
-     margin-bottom: 1.25rem;
- }
-
-
-
-/*
- * Link styles.
- */
-
-.heading-link:focus, .heading-link:hover {
-    color: #000;
-    text-decoration: none;
-}
-
-
-.help-section {
-    margin-bottom: 3rem;
-}
-
-.help-heading {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 3rem;
-}
-
-.help-section-heading {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 1.5rem;
-}
-
-.help-subsection-heading {
-    font-size: 1rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-}
-
-
-
-.content-item {
-    margin-bottom: 2rem;
-}
-
-.image-list {
-    text-align: center;
-}
-
-.image-list-item {
-    margin: 0 2rem 1rem 2rem;
-}
-
-
-.square-middle {
-    height: 140px;
-    display: table-cell;
-    vertical-align: middle;
-}
+---
+---
+
+{% include css/global.css %}
+{% include css/section.css %}
+{% include css/common.css %}
+{% include css/page.css %}
