--- a/_includes/jumbotrons/colorveil-windows.html
+++ b/_includes/jumbotrons/colorveil-windows.html
@@ -1,8 +1,10 @@
 <!-- ColorVeil for Windows Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/colorveil/colorveil-jumbotron-shot.png" alt="ColorVeil Screenshot" />
-        <h1 class="jumbotron-heading"><strong class="appname">ColorVeil.</strong> A customizable color filter over your screen. Reduce eye strain, help with Dyslexia / Irlen.</h1>
+        <a href="/colorveil/windows/">
+            <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/colorveil/colorveil-jumbotron-shot.png" alt="ColorVeil Screenshot" />
+        </a>
+        <h1 class="jumbotron-heading"><a href="/colorveil/windows/" class="appname">ColorVeil.</a> A customizable color filter over your screen. Reduce eye strain, help with Dyslexia / Irlen.</h1>
         <p class="jumbotron-quote"><q>A coloured tint across the screen helped students with their reading</q> (Middlewich High School)</p>
         <a class="btn btn-primary" href="/colorveil/windows/download/" role="button">Get it Free for Windows</a>
     </div>
