--- a/_includes/jumbotrons/injuredpixels-android.html
+++ b/_includes/jumbotrons/injuredpixels-android.html
@@ -1,13 +1,15 @@
 <!-- InjuredPixels for Android Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <img class="img-fluid pull-xs-right jumbotron-shot"
-            src="/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot.png"
-            srcset="/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot.png 1x,
-            /img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot-2x.png 2x,
-            /img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot-3x.png 3x"
-            alt="InjuredPixels for Android Screenshot" />
-        <h1 class="jumbotron-heading"><strong class="appname">InjuredPixels. </strong> Check the screen of your Android device for dead pixels, scratches or defects.</h1>
+        <a href="/injuredpixels/android/">
+            <img class="img-fluid pull-xs-right jumbotron-shot"
+                src="/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot.png"
+                srcset="/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot.png 1x,
+                /img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot-2x.png 2x,
+                /img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot-3x.png 3x"
+                alt="InjuredPixels for Android Screenshot" />
+        </a>
+        <h1 class="jumbotron-heading"><a href="/injuredpixels/android/" class="appname">InjuredPixels.</a> Check the screen of your Android device for dead pixels, scratches or defects.</h1>
         <p class="jumbotron-quote"><q>InjuredPixels is just about as simple a program as you'll see.</q> (BetaNews)</p>
         <p><a class="btn btn-primary" href="/injuredpixels/android/download/" role="button">Get it Free for Android</a></p>
         <p>Also available for <a class="link" href="/injuredpixels/windows/">Windows</a></p>
