--- a/_includes/jumbotrons/whatsmyco-web.html
+++ b/_includes/jumbotrons/whatsmyco-web.html
@@ -1,9 +1,11 @@
 <!-- WhatsMyCo Web Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/whatsmyco/web/whatsmyco-jumbotron-shot.png" alt="WhatsMyCo Screenshot" />
-        <h1 class="jumbotron-heading"><strong class="appname">WhatsMyCo.</strong>  Type your name or text and get your matching color! A fun way to discover colors!</h1>
+        <a href="/whatsmyco/web/">
+            <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/whatsmyco/web/whatsmyco-jumbotron-shot.png" alt="WhatsMyCo Screenshot" />
+        </a>
+        <h1 class="jumbotron-heading"><a href="/whatsmyco/web/" class="appname">WhatsMyCo.</a>  Type your name or text and get your matching color! A fun way to discover colors!</h1>
         <p class="jumbotron-quote"><q>WhatsMyCo is a pretty interesting concept.</q> (I Love Free Software)</p>
-        <a class="btn btn-primary" href="/whatsmyco/web/run/" role="button">Run In Your Browser</a>
+        <a class="btn btn-primary" href="/whatsmyco/web/download/" role="button">Run In Your Browser</a>
     </div>
 </div>
