--- a/_includes/templates/contentsection.html
+++ b/_includes/templates/contentsection.html
@@ -1,6 +1,6 @@
 <section class="row m-b-2">
     <div class="col-md-3 col-lg-2">
-        <h2 class="square-heading">{{include.heading}}</h2>
+        <h2 class="section-heading">{{include.heading}}</h2>
     </div>
     <div class="col-md-8 col-lg-9">
         {{thecontent}}
