--- a/_includes/css/global.css
+++ b/_includes/css/global.css
@@ -96,7 +96,7 @@ a:focus, a:hover {
 }
 
 .jumbotron-quote {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
 }
 
 /* Jumbotron content link */
@@ -116,6 +116,7 @@ a:focus, a:hover {
 .jumbotron-shot {
     border: 4px solid #fff;
     margin-left: 1rem;
+    max-width: 300px;
 }
 
 
