Restore sponsored jumbotron structure from current site

--- a/_layouts/download-page.html
+++ b/_layouts/download-page.html
@@ -1,6 +1,6 @@
 {% include common/header.html %}
 
-{% include jumbotrons/{{page.app}}.html %}
+{% include jumbotrons/east-tec.html %}
 
 {% include templates/app-secondary-menu.html %}
 
