--- a/_includes/css/global.css
+++ b/_includes/css/global.css
@@ -115,8 +115,9 @@ a:focus, a:hover {
 
 .jumbotron-shot {
     border: 4px solid #fff;
+    height: 278px;
     margin-left: 1rem;
-    max-width: 300px;
+    width: 300px;
 }
 
 
